--- a/style.scss
+++ b/style.scss
@@ -42,10 +42,13 @@ body
     font-size: 3.5em;
     box-shadow: $box-shadow;
     text-align: center;
-     &:hover{
+}
+.box a{
+    text-decoration: none;
+    &:hover{
         transform: scale(1.2);
         transition: transform 330ms ease-in-out;
-    }   
+    }
 }
 .box--1 {
     color: black;
@@ -67,13 +70,8 @@ body
     color: green;
     background: $color-box4;
 }
-a
-{
-    text-decoration: none;
-}
-.box--5{
+aside{
     text-align: center;
-    margin: auto;
 }
 em {
     color: $color-titre;
@@ -81,10 +79,10 @@ em {
     text-align: center;
     color: $color-titre;
     background: $color-primary;
-    font-size: 2rem;
+    font-size: 1.5rem;
     border-radius: 5% 5% 5% 5%;
-    padding: 30px;
-    margin: 30px;
+    padding: 20px;
+    margin: 10px;
 }
 .btn{
     content: ".";
@@ -107,24 +105,32 @@ em {
     text-shadow: 0.25em 0 0 $color-titre, 0.5em 0 0 $color-titre;
 }
 }
-.footer
+footer
 { 
+    position: sticky;
     display: flex;
     justify-content: space-between;
     background-color: $color-primary;
-    margin-bottom: 20px;
+    bottom: 0px;
     
 } 
-.footer a
+footer a
 {  
     color: $color-titre;
     font-size: 1.8rem;
     text-decoration: none;
     margin: 10px;
     &:hover{
-        transform: scale(1.2);
-        transition:transform 330ms ease-in-out;
+    animation: wiggle 1s infinite;
     }
+}
+@keyframes wiggle {
+    2%{transform: rotate(0deg); }
+    4%{transform: rotate(2deg);}
+    6%{transform: rotate(-2deg);}
+    8%{transform: rotate(3deg);}
+    10%{transform: rotate(-3deg);}
+    100%{transform: rotate(0deg);}
 }
 .blocpage1
 {
@@ -182,6 +188,7 @@ h1
     font-size: 3rem;
     font-weight: bolder;
     padding-top: 20px;
+    margin: 0px;
 }    
 
 
