--- a/style.scss
+++ b/style.scss
@@ -37,41 +37,60 @@ body
 .box{
     width: 100%;
     max-width: 400px;
+    height: 350px;
     margin: 15px;
-    padding: 15px;
-    font-size: 3.5em;
+    padding-top: 230px;
+    font-size: 1.5em;
     box-shadow: $box-shadow;
     text-align: center;
 }
 .box a{
     text-decoration: none;
     &:hover{
-        transform: scale(1.2);
-        transition: transform 330ms ease-in-out;
+        transform: scale(1.2);        
+        display: inline-block;
+        overflow: hidden;
+        transition: transform 0.4s ease-in-out 0s;
+        opacity: 50%;
     }
 }
 .box--1 {
-    color: black;
+    text-align: center;
     background:$color-box1;
+    & a {
+        color: black;
+    }
 }
-
 .box--2{
+    text-align: center;
     background:  rgb(245, 239, 231);
-    background: linear-gradient( brown , blue);
-    -webkit-text-fill-color : transparent;
-    -webkit-background-clip: text;
+    & a{
+            transition: transform 0.4s ease-in-out 0s;
+        background: -webkit-linear-gradient(0deg, #cc6410 0% 30%, #a45be9, blue);
+        -webkit-text-fill-color : transparent;
+        -webkit-background-clip: text;
+    }
 }
 
 .box--3{
-    color: blue;
     background:$color-box3;
+    & a{
+        color: blue;
+    }
 }
 .box--4{
-    color: green;
     background: $color-box4;
+    & a{
+        color: green;
+    }
+}
+.box5{
+   text-align: center;
 }
 aside{
     text-align: center;
+    display: flex;
+    justify-content: space-around;
 }
 em {
     color: $color-titre;
@@ -190,8 +209,6 @@ h1
     padding-top: 20px;
     margin: 0px;
 }    
-
-
 .icon
 {
     text-align: center;
@@ -201,6 +218,7 @@ i {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
 h2{
     text-align: center;
     font-size: 3.5rem;
@@ -235,12 +253,10 @@ h6
 }
 p
 {
-    margin: 10px;
+    margin-left: 50px;
 }
 .note1, .note2{
-    margin-bottom: 20px;
-    margin-left: 70px;
-    margin-right: 70px;
+    text-align: center;
     font-weight: bold;
     font-size: 1.5rem;
     display: inline-block;
@@ -260,9 +276,6 @@ p
     transform-origin: bottom left;
 }
 .note3{
-    margin-bottom: 20px;
-    margin-left: 30px;
-    margin-right: 30px;
     font-weight: bold;
     font-size: 1.5rem;
     display: inline-block;
@@ -280,7 +293,6 @@ p
     }
 
 .chic1{
-    margin-bottom: 30px;
     font-weight: bold;
     color: indianred;
     font-size: 1.3rem;
@@ -297,10 +309,8 @@ p
         transform-origin: bottom left;
     }
 
-
 .chic2 {
     color: indigo;
-    margin: 30px;
     font-size: 1.3rem;
     font-weight: bold;
     display: inline-block;
@@ -319,7 +329,6 @@ p
 .chic3{
     font-size: 1.3rem;
     color: blue;
-    margin: 30px;
     font-weight: bold;
     display: inline-block;
     position: relative;
@@ -333,15 +342,6 @@ p
         transform: scaleX(1);
         transform-origin: bottom left;
     }
-  .delice1{
-      margin-bottom: 20px;
-  }  
- .delice2{
-     margin: 20px;
- }   
- .delice3{
-     margin: 20px;
- }
 .delice1,.delice2,.delice3{
         font-weight: bold;
         display: inline-block;
@@ -367,16 +367,6 @@ p
         transform: scaleX(1);
         transform-origin: bottom left;
     }
-    .gout1{
-        margin: 40px;
-        margin-bottom: 10px;
-    }
-    .gout2{
-        margin: 10px;
-    }
-    .gout3{
-        margin: 10px;
-    }
     .gout1,.gout2,.gout3{
         font-weight: bold;
         display: inline-block;
@@ -401,21 +391,22 @@ p
     .gout3:hover::before{
         transform: scaleX(1);
         transform-origin: bottom left;
-    }
-.element
+    } 
+article
 {
     display: flex;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 .text 
 {
-    width: 750px;
-    margin-bottom: 10px;
+    width: 850px;
+    margin-left: 10px;
 }
 .prix
 {
     margin: 10px;
 }
-
 
 @media screen and(max-width:768px){
     body{
@@ -426,7 +417,8 @@ p
     .box
     {
         width: auto;
-        font-size: 2rem;
+        height: auto;
+        padding: 20px;
     }
     .blocpage1 , .blocpage2,.blocpage3,.blocpage4,.blocpage5{
         padding: 5px;
@@ -437,7 +429,11 @@ p
             width: auto;
             font-size: 1.3rem;
             text-align: center;
-        }  
+        } 
+        img{
+            display: none;
+        } 
+        
     .text{
            width: 100%;
             margin: 5px;
@@ -445,22 +441,9 @@ p
     .prix{
             margin: 5px;
         }
-    img
-        {
-            display: none;
-        } 
+     
      .footer a {
          font-size: 1rem;
-     }   
-    .chic1{
-        margin-top: 20px;
-        margin-left: 30px;
-    }   
-    .delice1{
-        margin-left: 20px;
-    }
-    .gout2, .gout3{
-        margin-left: 30px;
-    }
-   
-}
+     }  
+     
+}    
