--- a/style.scss
+++ b/style.scss
@@ -414,35 +414,47 @@ article
         width: 100%;
         font-size: 1rem;
     }
+    .container{
+        justify-content: space-around;
+    }
     .box
     {
-        width: auto;
+        width: 100%;
         height: auto;
         padding: 20px;
     }
     .blocpage1 , .blocpage2,.blocpage3,.blocpage4,.blocpage5{
-        padding: 5px;
-           margin: 0;
-        font-size: 0.8rem; 
+        padding: 0px;
+           margin: 0px;
            }
     h2, h3 , h4, h5, h6{
             width: auto;
-            font-size: 1.3rem;
+            font-size: 1.5rem;
             text-align: center;
         } 
+        .chic1 , .chic2, .chic3, .delice1, .delice2, .delice3,.gout1, .gout2, .gout3{
+            font-size: 1rem;
+        }
         img{
             display: none;
         } 
-        
+        article{
+            flex-direction: column;
+            margin-left: 10px;
+            margin-right: 30px;
+            margin-bottom: 10px;
+        }
+       
     .text{
            width: 100%;
-            margin: 5px;
-        }
+          text-align: center;
+         }
     .prix{
-            margin: 5px;
+          text-align: center;
+          margin: 0px;
         }
      
-     .footer a {
+     footer a {
          font-size: 1rem;
      }  
      
