--- a/style.css
+++ b/style.css
@@ -16,46 +16,66 @@ body {
 .box {
   width: 100%;
   max-width: 400px;
+  height: 350px;
   margin: 15px;
-  padding: 15px;
-  font-size: 3.5em;
+  padding-top: 230px;
+  font-size: 1.5em;
   box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.3);
   text-align: center;
 }
-.box:hover {
+
+.box a {
+  text-decoration: none;
+}
+.box a:hover {
   transform: scale(1.2);
-  transition: transform 330ms ease-in-out;
+  display: inline-block;
+  overflow: hidden;
+  transition: transform 0.4s ease-in-out 0s;
+  opacity: 50%;
 }
 
 .box--1 {
-  color: black;
+  text-align: center;
   background: #eeb7e7;
+}
+.box--1 a {
+  color: black;
 }
 
 .box--2 {
+  text-align: center;
   background: #f5efe7;
-  background: linear-gradient(brown, blue);
+}
+.box--2 a {
+  transition: transform 0.4s ease-in-out 0s;
+  background: -webkit-linear-gradient(0deg, #cc6410 0% 30%, #a45be9, blue);
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
 }
 
 .box--3 {
-  color: blue;
   background: #d4d4f0;
+}
+.box--3 a {
+  color: blue;
 }
 
 .box--4 {
-  color: green;
   background: #f5efe7;
 }
-
-a {
-  text-decoration: none;
+.box--4 a {
+  color: green;
 }
 
-.box--5 {
+.box5 {
   text-align: center;
-  margin: auto;
+}
+
+aside {
+  text-align: center;
+  display: flex;
+  justify-content: space-around;
 }
 
 em {
@@ -64,10 +84,10 @@ em {
   text-align: center;
   color: #eeee09;
   background: #0e5532;
-  font-size: 2rem;
+  font-size: 1.5rem;
   border-radius: 5% 5% 5% 5%;
-  padding: 30px;
-  margin: 30px;
+  padding: 20px;
+  margin: 10px;
 }
 
 .btn {
@@ -91,24 +111,44 @@ em {
     text-shadow: 0.25em 0 0 #eeee09, 0.5em 0 0 #eeee09;
   }
 }
-.footer {
+footer {
+  position: sticky;
   display: flex;
   justify-content: space-between;
   background-color: #0e5532;
-  margin-bottom: 20px;
+  bottom: 0px;
 }
 
-.footer a {
+footer a {
   color: #eeee09;
   font-size: 1.8rem;
   text-decoration: none;
   margin: 10px;
 }
-.footer a:hover {
-  transform: scale(1.2);
-  transition: transform 330ms ease-in-out;
+footer a:hover {
+  animation: wiggle 1s infinite;
 }
 
+@keyframes wiggle {
+  2% {
+    transform: rotate(0deg);
+  }
+  4% {
+    transform: rotate(2deg);
+  }
+  6% {
+    transform: rotate(-2deg);
+  }
+  8% {
+    transform: rotate(3deg);
+  }
+  10% {
+    transform: rotate(-3deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
 .blocpage1 {
   padding: 60px;
   background-color: #fcd5f5;
@@ -167,6 +207,7 @@ h1 {
   font-size: 3rem;
   font-weight: bolder;
   padding-top: 20px;
+  margin: 0px;
 }
 
 .icon {
@@ -213,13 +254,11 @@ h6 {
 }
 
 p {
-  margin: 10px;
+  margin-left: 50px;
 }
 
 .note1, .note2 {
-  margin-bottom: 20px;
-  margin-left: 70px;
-  margin-right: 70px;
+  text-align: center;
   font-weight: bold;
   font-size: 1.5rem;
   display: inline-block;
@@ -249,9 +288,6 @@ p {
 }
 
 .note3 {
-  margin-bottom: 20px;
-  margin-left: 30px;
-  margin-right: 30px;
   font-weight: bold;
   font-size: 1.5rem;
   display: inline-block;
@@ -276,7 +312,6 @@ p {
 }
 
 .chic1 {
-  margin-bottom: 30px;
   font-weight: bold;
   color: indianred;
   font-size: 1.3rem;
@@ -303,7 +338,6 @@ p {
 
 .chic2 {
   color: indigo;
-  margin: 30px;
   font-size: 1.3rem;
   font-weight: bold;
   display: inline-block;
@@ -330,7 +364,6 @@ p {
 .chic3 {
   font-size: 1.3rem;
   color: blue;
-  margin: 30px;
   font-weight: bold;
   display: inline-block;
   position: relative;
@@ -351,18 +384,6 @@ p {
 .chic3:hover::before {
   transform: scaleX(1);
   transform-origin: bottom left;
-}
-
-.delice1 {
-  margin-bottom: 20px;
-}
-
-.delice2 {
-  margin: 20px;
-}
-
-.delice3 {
-  margin: 20px;
 }
 
 .delice1, .delice2, .delice3 {
@@ -398,19 +419,6 @@ p {
   transform-origin: bottom left;
 }
 
-.gout1 {
-  margin: 40px;
-  margin-bottom: 10px;
-}
-
-.gout2 {
-  margin: 10px;
-}
-
-.gout3 {
-  margin: 10px;
-}
-
 .gout1, .gout2, .gout3 {
   font-weight: bold;
   display: inline-block;
@@ -444,13 +452,15 @@ p {
   transform-origin: bottom left;
 }
 
-.element {
+article {
   display: flex;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 
 .text {
-  width: 750px;
-  margin-bottom: 10px;
+  width: 850px;
+  margin-left: 10px;
 }
 
 .prix {
@@ -464,51 +474,54 @@ p {
     font-size: 1rem;
   }
 
+  .container {
+    justify-content: space-around;
+  }
+
   .box {
-    width: auto;
-    font-size: 2rem;
+    width: 100%;
+    height: auto;
+    padding: 20px;
   }
 
   .blocpage1, .blocpage2, .blocpage3, .blocpage4, .blocpage5 {
-    padding: 5px;
-    margin: 0;
-    font-size: 0.8rem;
+    padding: 0px;
+    margin: 0px;
   }
 
   h2, h3, h4, h5, h6 {
     width: auto;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     text-align: center;
   }
 
-  .text {
-    width: 100%;
-    margin: 5px;
-  }
-
-  .prix {
-    margin: 5px;
+  .chic1, .chic2, .chic3, .delice1, .delice2, .delice3, .gout1, .gout2, .gout3 {
+    font-size: 1rem;
   }
 
   img {
     display: none;
   }
 
-  .footer a {
+  article {
+    flex-direction: column;
+    margin-left: 10px;
+    margin-right: 30px;
+    margin-bottom: 10px;
+  }
+
+  .text {
+    width: 100%;
+    text-align: center;
+  }
+
+  .prix {
+    text-align: center;
+    margin: 0px;
+  }
+
+  footer a {
     font-size: 1rem;
-  }
-
-  .chic1 {
-    margin-top: 20px;
-    margin-left: 30px;
-  }
-
-  .delice1 {
-    margin-left: 20px;
-  }
-
-  .gout2, .gout3 {
-    margin-left: 30px;
   }
 }
 
