--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ strong {
 }
 
 .box--1 {
+  font-family: "Satisfy regular";
   text-align: center;
   background: #eeb7e7;
 }
@@ -81,7 +82,7 @@ aside {
   justify-content: space-around;
 }
 
-em {
+mark {
   color: #eeee09;
   display: inline-block;
   text-align: center;
@@ -129,23 +130,27 @@ footer a {
   margin: 10px;
 }
 footer a:hover {
-  animation: shake 1s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
-  animation-iteration-count: infinite;
-  transform: translate3d(0, 0, 0);
+  animation: wiggle 400ms ease infinite;
 }
 
-@keyframes shake {
-  10%, 90% {
-    transform: translate(-1px, 0);
+@keyframes wiggle {
+  2% {
+    transform: rotate(0deg);
   }
-  20%, 80% {
-    transform: translate(2px, 0);
+  4% {
+    transform: rotate(2deg);
   }
-  50%, 70% {
-    transform: translate(-4px, 0);
+  6% {
+    transform: rotate(-2deg);
   }
-  40%, 60% {
-    transform: translate(4px, 0);
+  8% {
+    transform: rotate(3deg);
+  }
+  10% {
+    transform: rotate(-3deg);
+  }
+  100% {
+    transform: rotate(0deg);
   }
 }
 .blocpage1 {
@@ -222,8 +227,9 @@ i {
 }
 
 h2 {
+  font-family: "Satisfy regular";
   text-align: center;
-  font-size: 3.5rem;
+  font-size: 4.5rem;
 }
 
 h3 {
