--- a/style.scss
+++ b/style.scss
@@ -58,6 +58,7 @@ strong{
     }
 }
 .box--1 {
+    font-family: 'Satisfy regular';
     text-align: center;
     background:$color-box1;
     & a {
@@ -95,7 +96,7 @@ aside{
     display: flex;
     justify-content: space-around;
 }
-em {
+mark {
     color: $color-titre;
     display: inline-block;
     text-align: center;
@@ -143,17 +144,17 @@ footer a
     text-decoration: none;
     margin: 10px;
     &:hover{
-    animation: shake 1s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
-    animation-iteration-count: infinite;
-    transform:translate3d(0, 0, 0);
+    animation: wiggle 400ms ease infinite;
     }
 }
 
-@keyframes shake {
-    10%, 90% { transform: translate(-1px,0);}    
-    20%, 80% { transform: translate(2px, 0);}
-    50%, 70% {transform: translate(-4px, 0);}
-    40%, 60% {transform: translate(4px, 0);}
+@keyframes wiggle {
+    2%{ transform: rotate(0deg);}    
+    4% { transform: rotate(2deg);}
+    6% {transform: rotate(-2deg);}
+    8% {transform: rotate(3deg);}
+    10% {transform: rotate(-3deg);}
+    100%{transform: rotate(0deg);}
 }
 .blocpage1
 {
@@ -225,8 +226,9 @@ i {
 }
 
 h2{
+    font-family: 'Satisfy regular';
     text-align: center;
-    font-size: 3.5rem;
+    font-size: 4.5rem;
 }
 h3
 {
